- Remove deamonize dependency. - Remove sysvinit from rpm name.

--- a/graphite_exporter/Makefile
+++ b/graphite_exporter/Makefile
@@ -8,12 +8,11 @@ all: rpm clean
 rpm:
 	mkdir -p "$(PWD)/rpmbuild"
 	mkdir -p "$(PWD)/rpmbuild/SOURCES/"
-	cd "$(PWD)/rpmbuild/SOURCES" && wget https://github.com/prometheus/$(NAME)/releases/download/$(VERSION)/$(NAME)-$(VERSION).linux-amd64.tar.gz
+	cd "$(PWD)/rpmbuild/SOURCES" && wget -N https://github.com/prometheus/$(NAME)/releases/download/$(VERSION)/$(NAME)-$(VERSION).linux-amd64.tar.gz
 	cd "$(PWD)/rpmbuild/SOURCES" && mkdir -p "$(NAME)-$(VERSION).linux-amd64" && tar xzvf *tar.gz -C "graphite_exporter-$(VERSION).linux-amd64"
 	cp -Rv contrib "$(PWD)/rpmbuild/SOURCES/$(NAME)-$(VERSION).linux-amd64"
 	cd "$(PWD)/rpmbuild/SOURCES" && tar cvfz $(NAME)-$(VERSION).linux-amd64.tar.gz $(NAME)-$(VERSION).linux-amd64
 	rpmbuild --define "version $(VERSION)" --define '_topdir '"$(PWD)/rpmbuild" -ba --clean contrib/$(NAME).spec
-	rpmbuild --with sysvinit --without systemd --define "version $(VERSION)" --define '_topdir '"$(PWD)/rpmbuild" -ba --clean contrib/$(NAME).spec
 
 clean:
 	rm -rf "$(PWD)/rpmbuild/SOURCES/$(NAME)-$(VERSION).linux-amd64"
